// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefboxField shows a cyan refbox field with all buttons 1`] = `
<styled.div>
  <styled.div>
    <Styled(RefboxButton)
      isPenalty={false}
      key="KO"
      onClick={[Function]}
      teamColor="magenta"
    >
      KO
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="FK"
      onClick={[Function]}
      teamColor="magenta"
    >
      FK
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="GK"
      onClick={[Function]}
      teamColor="magenta"
    >
      GK
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="TI"
      onClick={[Function]}
      teamColor="magenta"
    >
      TI
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="C"
      onClick={[Function]}
      teamColor="magenta"
    >
      C
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="P"
      onClick={[Function]}
      teamColor="magenta"
    >
      P
    </Styled(RefboxButton)>
  </styled.div>
  <styled.div>
    <Styled(RefboxButton)
      isPenalty={false}
      key="KO"
      onClick={[Function]}
      teamColor="cyan"
    >
      KO
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="FK"
      onClick={[Function]}
      teamColor="cyan"
    >
      FK
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="GK"
      onClick={[Function]}
      teamColor="cyan"
    >
      GK
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="TI"
      onClick={[Function]}
      teamColor="cyan"
    >
      TI
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="C"
      onClick={[Function]}
      teamColor="cyan"
    >
      C
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="P"
      onClick={[Function]}
      teamColor="cyan"
    >
      P
    </Styled(RefboxButton)>
  </styled.div>
</styled.div>
`;

exports[`RefboxField shows a magenta refbox field with all buttons 1`] = `
<styled.div>
  <styled.div>
    <Styled(RefboxButton)
      isPenalty={false}
      key="KO"
      onClick={[Function]}
      teamColor="magenta"
    >
      KO
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="FK"
      onClick={[Function]}
      teamColor="magenta"
    >
      FK
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="GK"
      onClick={[Function]}
      teamColor="magenta"
    >
      GK
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="TI"
      onClick={[Function]}
      teamColor="magenta"
    >
      TI
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="C"
      onClick={[Function]}
      teamColor="magenta"
    >
      C
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="P"
      onClick={[Function]}
      teamColor="magenta"
    >
      P
    </Styled(RefboxButton)>
  </styled.div>
  <styled.div>
    <Styled(RefboxButton)
      isPenalty={false}
      key="KO"
      onClick={[Function]}
      teamColor="cyan"
    >
      KO
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="FK"
      onClick={[Function]}
      teamColor="cyan"
    >
      FK
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="GK"
      onClick={[Function]}
      teamColor="cyan"
    >
      GK
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="TI"
      onClick={[Function]}
      teamColor="cyan"
    >
      TI
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="C"
      onClick={[Function]}
      teamColor="cyan"
    >
      C
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={false}
      key="P"
      onClick={[Function]}
      teamColor="cyan"
    >
      P
    </Styled(RefboxButton)>
  </styled.div>
</styled.div>
`;

exports[`RefboxField shows a magenta refbox with penalty buttons 1`] = `
<styled.div>
  <styled.div>
    <Styled(RefboxButton)
      isPenalty={true}
      key="Soft"
      onClick={[Function]}
      teamColor="magenta"
    >
      Soft
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={true}
      key="Medium"
      onClick={[Function]}
      teamColor="magenta"
    >
      Medium
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={true}
      key="Hard"
      onClick={[Function]}
      teamColor="magenta"
    >
      Hard
    </Styled(RefboxButton)>
  </styled.div>
  <styled.div>
    <Styled(RefboxButton)
      isPenalty={true}
      key="Soft"
      onClick={[Function]}
      teamColor="cyan"
    >
      Soft
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={true}
      key="Medium"
      onClick={[Function]}
      teamColor="cyan"
    >
      Medium
    </Styled(RefboxButton)>
    <Styled(RefboxButton)
      isPenalty={true}
      key="Hard"
      onClick={[Function]}
      teamColor="cyan"
    >
      Hard
    </Styled(RefboxButton)>
  </styled.div>
</styled.div>
`;
